Automatically scroll to bottom

--- a/views/index.jade
+++ b/views/index.jade
@@ -56,6 +56,8 @@ block content
     socket.on('message-received', function(user, msg) {
       $('#messages').append($('<li>').text('[' + user + ']: ' + msg));
       //document.getElementById('messages').innerHTML += '<li>' + msg + '</li>';
+      
+      window.scrollTo(0,document.body.scrollHeight);
     });
     
     socket.on('update', function(update) {
