--- a/views/index.jade
+++ b/views/index.jade
@@ -1,77 +1,30 @@
 extends layout
 
-block additional
-
 block content
+  // prompt
   #overlay
     #username-prompt
       form(action="")
-        p#usernameSet(style="display: none")= usernameSet
         h4 Tell us what you want to be called
-        input(id="username", autocomplete="off", placeholder="Username")
+        input(id="username-input", autocomplete="off", placeholder="Username")
         button Set
-
-  ul#messages
   
-  form#input(action="")
-    input(id="message", autocomplete="off", placeholder="Enter your message...")
-    button#send <i class="fa fa-paper-plane" aria-hidden="true"></i>
-    
-  script(src="https://code.jquery.com/jquery-3.1.1.min.js", integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=", crossorigin="anonymous")
-  script.
-    if ($('#usernameSet').value == 'true') {
-      $('#overlay').style.display = none;
-      $('#message').focus();
-    }
-    else
-      $('#username').focus();
+  // chat
+  #people
   
-    var socket = io();
+  #messaging
+    // TODO add calling ribbon
     
-    $('#username-prompt form').submit(function(e) {
-      e.preventDefault();
+    #messages
+      ul
+    
+    // TODO figure out where to put emojis
+    #message-form
+      // TODO add insertion for files
       
-      var username = document.getElementById('username').value
-      if (username !== '') {
-        socket.emit('joined', username);
-        $('#overlay').hide();
-        $('#message').focus();
-        $('#usernameSet').value = 'true';
+      form(action="")
+        textarea(id="message-input", autocomplete="off", autocorrect="on", spellcheck="true", placeholder="Message...", rows="1")
+        button#send <i class="fa fa-paper-plane" aria-hidden="true"></i>
         
-        return false;
-      }
-    });
-    
-    $('#input').submit(function(e) {
-    //document.getElementById('input').on('submit', function(e) {
-      e.preventDefault();
-      
-      var msg = document.getElementById('message').value;
-      if (/\S/.test(msg)) {
-        //console.log(document.getElementById('message').value);
-        socket.emit('message-sent', msg);
-        document.getElementById('message').value = '';
-        
-        return false;
-      }
-    });
-    
-
-    var initialScroll = document.body.scrollHeight; 
-    socket.on('message-received', function(user, msg) {
-      $('#messages').append($('<li>').text('[' + user + ']: ' + msg));
-      //document.getElementById('messages').innerHTML += '<li>' + msg + '</li>';
-      
-      var curScroll = (document.documentElement.scrollTop || window.pageYOffset) + initialScroll;
-      if (curScroll >= document.body.scrollHeight - 100)
-        window.scrollTo(0, document.body.scrollHeight);
-    });
-    
-    socket.on('update', function(update) {
-      $('#messages').append($('<li>').text(update));
-      //document.getElementById('messages').innerHTML += '<li>User disconnected</li>';
-
-      var curScroll = (document.documentElement.scrollTop || window.pageYOffset) + initialScroll;
-      if (curScroll >= document.body.scrollHeight - 100)
-        window.scrollTo(0, document.body.scrollHeight);
-    });
+  
+  script(src="/js/chat-frontend.js")
