--- a/public/css/modules/_vars.scss
+++ b/public/css/modules/_vars.scss
@@ -28,6 +28,6 @@ $d-gray: #3C3C3C;
 $black:  #212121;
 
 // Site colors
-$bg-color: $white;
+$bg-color: white;
 $text-color: $black;
-$primary-color: #B39EB5;
+$primary-color: #464058;
