--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -17,9 +17,11 @@
 @import 'partials/flex-video';
 @import 'partials/name-lockup';
 @import 'partials/grid';
+@import 'partials/scrollbar';
 
 // Pages
 @import "partials/chat";
 
 @import 'partials/user-form';
 @import 'partials/overlay';
+@import 'partials/people';
