--- a/public/css/base/_body-element.scss
+++ b/public/css/base/_body-element.scss
@@ -1,4 +1,6 @@
-body {	
+body {
+	width: 100vw;
+	height: 100vh;
 	background-color: $bg-color;
 	font-size: 14px;
 	line-height: 1.6;
@@ -10,4 +12,11 @@ body {
 
 * {
 	box-sizing: border-box;
+}
+
+ul {
+	margin: 0;
+	padding: 0;
+
+	list-style-type: none;
 }
