--- a/public/css/partials/_overlay.scss
+++ b/public/css/partials/_overlay.scss
@@ -16,15 +16,12 @@
   width: 100%;
   height: 100%;
 
-  box-sizing: border-box;
-
   background: rgba(0, 0, 0, 0.4);
 
   #username-prompt {
+    min-width: 50%;
     margin: 0 auto;
-
     padding: 3% 3%;
-    box-sizing: border-box;
 
     background: $white;
     border-radius: 2px;
@@ -32,18 +29,24 @@
                 0 1px 2px rgba(0,0,0,0.24);
   }
 
+  h4 {
+    margin: 0 0 10px;
+    font-size: 18px;
+
+    color: #444;
+  }
+
+  h5 {
+    margin: 0 0 10px;
+
+    word-wrap: break-word;
+  }
+
   form {
     box-sizing: border-box;
 
-    h4 {
-      margin: 0 0 10px;
-      font-size: 18px;
-
-      color: #444;
-    }
-
     input {
-      width: 69%;
+      width: 70%;
       font-size: 18px;
 
       padding: 1px 3px;
