--- a/views/chatroom.pug
+++ b/views/chatroom.pug
@@ -1,7 +1,8 @@
 extends layout
 
 block additional
-  link(rel="stylesheet", href="https://cdnjs.cloudflare.com/ajax/libs/jquery.perfect-scrollbar/0.6.15/css/perfect-scrollbar.min.css")
+  link(rel="stylesheet", href="/css/style.css")
+  //link(rel="stylesheet", href="https://cdnjs.cloudflare.com/ajax/libs/jquery.perfect-scrollbar/0.6.15/css/perfect-scrollbar.min.css")
 
 block content
   // prompt
@@ -11,14 +12,21 @@ block content
       h5.alert(style="display: none;") Username can only consist of lowercase and uppercase letters, numbers, '.', '_' and '-' characters
       
       form(action="")
-        input(id="username-input", autocomplete="off", placeholder="Username")
+        input(id="username", autocomplete="off", placeholder="Username")
+        if isPrivate == false
+          #admin-login
+            a(href="") I am an admin...
+        input(id="password", type="password", placeholder="Password", style="display: none")
         button Set
   
   // chat
   #channel-data
     #channel-heading
-      h1= title
-      span#username-display username
+      h1#title= title
+      if isLoggedIn
+        span#username-display= username
+      else
+        span#username-display
       
     #online-list-section.section.no-margin-bottom
       h2#online-list-header.channel-header People
@@ -43,6 +51,5 @@ block content
         textarea(id="message-input", type="text", autocomplete="off", autocorrect="on", spellcheck="true", placeholder="Message...", rows="1", aria-autocomplete="both")
         button(id="send", type="submit") Send
         
-  //script(src="https://cdnjs.cloudflare.com/ajax/libs/jquery.perfect-scrollbar/0.6.15/js/perfect-scrollbar.min.js")
-  //script(src="https://raw.githubusercontent.com/jamesflorentino/nanoScrollerJS/master/bin/javascripts/jquery.nanoscroller.min.js")
+  script(src="/js/cookies.js")
   script(src="/js/chat-frontend.js")
