--- a/public/css/partials/_chat.scss
+++ b/public/css/partials/_chat.scss
@@ -27,7 +27,7 @@ body {
   width: 100%;
   max-height: calc(100% - 70px);
 
-  overflow: hidden;
+  overflow: auto;
 
   li {
     padding: 5px 10px;
