--- a/public/css/partials/_overlay.scss
+++ b/public/css/partials/_overlay.scss
@@ -43,21 +43,44 @@
   }
 
   form {
+    position: relative;
+
     box-sizing: border-box;
 
     input {
       width: 70%;
+      height: 100%;
+
       font-size: 18px;
+
+      padding: 1px 3px;
+
+      border: 2px inset;
+      box-shadow: none;
+
+      &:nth-child(1) {
+        margin-bottom: 10px;
+      }
+    }
+
+    #admin-login {
+      display: inline-block;
+
+      width: 70%;
+
+      font-size: 14px;
 
       padding: 1px 3px;
     }
 
     button {
+      position: absolute;
+      top: 0;
+
       width: 20%;
-      height: 28px;
+      height: 100%;
       padding: 4px 0;
 
-      margin-top: -4px;
       margin-left: 5%;
 
       color: white;
