--- a/views/chatroom.pug
+++ b/views/chatroom.pug
@@ -23,10 +23,7 @@ block content
   #channel-data
     #channel-heading
       h1#title= title
-      if isLoggedIn
-        span#username-display= username
-      else
-        span#username-display
+      span#username-display username
       
     #online-list-section.section.no-margin-bottom
       h2#online-list-header.channel-header People
