--- a/public/css/partials/_user-form.scss
+++ b/public/css/partials/_user-form.scss
@@ -1,38 +1,7 @@
+@import './checkbox';
+
 label {
 	cursor: pointer;
-
-	color: $d-gray;
-}
-
-.form-wrapper {
-	font-size: 1.2em;
-	font-weight: 300;
-	letter-spacing: 0.4px;
-	word-spacing: 1px;
-
-	min-width: 400px;
-	width: 50px;
-	margin: 20px auto;
-	padding: 20px 25px;
-
-	background-color: white;
-	border-radius: 5px;
-	box-shadow: 0 1px 3px rgba(0,0,0,0.12),
-				0 1px 2px rgba(0,0,0,0.24);
-
-	button {
-		width: 100%;
-	}
-
-	hr {
-		margin: 30px 0;
-	}
-
-	@media (max-width: 400px) {
-		min-width: 100%;
-
-		border-radius: 0;
-	}
 }
 
 .section-title {
@@ -76,53 +45,58 @@ label {
 	}
 }
 
-form.primary button {
-	color: white;
-	font-size: 18px;
-	font-weight: 600;
-
-	margin-top: 1em;
-
-	background: darken($primary-color, 5%);
-	box-shadow: 0 2px 1px 0 darken($primary-color, 35%);
-	border: none;
-	border-radius: 2px;
-
-	transition: all 0.25s ease-in-out;
-
-	&:hover {
-		color: white;
-
-		background-color: lighten($primary-color, 5%);
-		box-shadow: darken($primary-color, 17%);
-	}
-}
-
 .form-field {
 	width: 100%;
 	margin: 10px 0 25px 0;
+
+	text-align: left;
 
 	&:last-child {
 		margin-bottom: 5px;
 	}
 
-	label {
-		display: block;
+  &:not(.checkbox-container) {
+    input {
+      width: 100%;
+  		height: 32px;
+  		margin-bottom: 5px;
+  		padding: 0 10px;
 
-		margin-bottom: 6px;
-	}
+  		&:-webkit-autofill {
+  			-webkit-box-shadow: 0 0 0 50px white inset;
+  			-webkit-text-fill-color: #333;
+  		}
+    }
+  }
+}
 
-	input {
-		display: block;
+.break {
+  display: block;
 
-		width: 100%;
-		height: 32px;
-		margin-bottom: 5px;
-		padding: 0 10px;
+  margin-bottom: 6px;
+}
 
-		&:-webkit-autofill {
-			-webkit-box-shadow: 0 0 0 50px white inset;
-			-webkit-text-fill-color: #333;
-		}
-	}
+button.primary {
+  width: 100%;
+
+  margin-top: 1em;
+
+  font-size: 18px;
+  font-weight: 600;
+  color: white;
+
+  background: darken($primary-color, 5%);
+  box-shadow: 0 2px 1px 0 darken($primary-color, 35%);
+
+  border: none;
+  border-radius: 2px;
+
+  transition: all 0.25s ease-in-out;
+
+  &:hover {
+    color: white;
+
+    background-color: lighten($primary-color, 5%);
+    box-shadow: darken($primary-color, 17%);
+  }
 }
