Fixing up everything

--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -20,8 +20,8 @@
 @import 'partials/user-form';
 
 // Pages
-//@import 'partials/index';
-//@import "partials/chat";
+@import 'partials/index';
+@import "partials/chat";
 
-//@import 'partials/overlay';
-//@import 'partials/people';
+@import 'partials/overlay';
+@import 'partials/people';
